--- a/package.json
+++ b/package.json
@@ -1,5 +1,22 @@
 {
+  "name": "symptom-chatbot-frontend",
+  "version": "1.0.0",
+  "private": true,
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
-    "axios": "^1.11.0"
+    "axios": "^1.11.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
+  "devDependencies": {
+    "@types/react": "^18.3.23",
+    "@types/react-dom": "^18.3.7",
+    "@vitejs/plugin-react": "^3.1.0",
+    "typescript": "^5.9.2",
+    "vite": "^4.5.14"
   }
 }
